EXOJCR-726: patch proposed has been applied and tested